--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,12 @@
   position: relative;
 }
 
+body{
+	background-image: url("https://github.com/vaibhavkeshav/hackdays/raw/master/back.png");
+    background-repeat: no-repeat, repeat;
+    background-color: #cccccc;
+}
+
 .game-header>.score-block {
   display: inline-block;
 }
@@ -20,6 +26,74 @@
   margin-top: 5px;
   font-size: 12px;
 }
+
+
+.div1 {
+    width: 150px;
+    height: 200px;
+    display:hide;
+    position: relative;
+    -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+    animation-name: example;
+    animation-duration: 4s;
+}
+
+.div2 {
+    width: 350px;
+    height: 200px;
+    display:hide;
+    position: relative;
+    -webkit-animation-name: msgbub; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+    animation-name: msgbub;
+    animation-duration: 4s;
+}
+
+.para {
+    width: 300px;
+    height: 100px;
+    display:hide;
+    position: relative;
+	left:200px; top:100px;
+    -webkit-animation-name: msgshow; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
+    animation-name: msgbub;
+    animation-duration: 4s;
+}
+
+
+
+/* Standard syntax */
+@keyframes example {
+    0%   { display:input;left:-200px; top:100px;}
+    25%  { display:input;left:200px; top:100px;}
+    50%  { display:input;left:200px; top:100px;}
+    75%  { display:input;left:0px; top:100px;}
+    100% { display:input;left:-200px; top:100px;}
+}
+
+/* Standard syntax */
+@keyframes msgbub {
+    0%  {display:hide; left:200px; top:0px;}
+	25%  { display:hide;left:200px; top:0px;}
+    50%  { display:hide;left:200px; top:0px;}
+    75%  { display:hide;left:200px; top:0px;}
+    100% { display:block;left:200px; top:0px;}
+    100% { display:block;left:200px; top:0px;}
+}
+
+/* Standard syntax */
+@keyframes msgshow {
+    0%  {display:hide; left:200px; top:0px;}
+	25%  { display:hide;left:200px; top:0px;}
+    50%  { display:hide;left:200px; top:0px;}
+    75%  { display:hide;left:200px; top:0px;}
+    100% { display:block;left:200px; top:0px;}
+    100% { display:block;left:200px; top:0px;}
+}
+
+
 
 .game-header>.logo {
   display: inline-block;
@@ -120,6 +194,17 @@
     padding-top: 30%;
     font-size: 80%;
   }
+  
+  .img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+}
+
+  img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
   .start-button.new-game-button {
     margin: 0 15% 1% 15%;
   }
