--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<img style="position: absolute; top: 0; right: 0; border: 0;" width="120px" height="90px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/home.png"(click)="btn_clearGameBoard()" >
+<img style="cursor:pointer;position: absolute; top: 10; right:0; border: 0;" title='Home' width="120px" height="90px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/home.png"(click)="btn_clearGameBoard()" >
  <img class="div1" style="display:input;left:200px; top:100px;" src="https://github.com/vaibhavkeshav/hackdays/raw/master/hampster.png">  
- <img class="div2" style="display:input;left:200px; top:0px;;" src="https://github.com/vaibhavkeshav/hackdays/raw/master/chatbubble.png" text="hello">
- <p class="para2">jane saath kya jaega<p>
+ 	<img class="div2" style="display:input;left:200px; top:0px;;" src="https://github.com/vaibhavkeshav/hackdays/raw/master/chatbubble.png" text="hello">
+ <div class="InsideContainer">{{text}}</div>
 <div *ngIf="IschildAgeSet; else AskChildAge;">
 
 <div *ngIf="showGme; else Elsetemplate;">
@@ -17,11 +17,30 @@
 	  <div class="row" *ngFor="let column of board; let i = index;">
 		<div class="column" [ngStyle]="{'background-color': setColors(i, j)}" *ngFor="let row of column; let j = index"></div>
 	  </div>
-	  <div class="start-button" [ngClass]="{'disable-clicks': gameStarted}" (click)="showMenu()">Start Game</div>
+	  <div class="restart-button" (click)="showMenu()">Restart Game</div>
 	  <div class="new-game-menu" *ngIf="showMenuChecker">
 		<span class="new-game-menu-label">Select Mode</span>
-		<div class="start-button new-game-button" (click)="newGame(mode)" *ngFor="let mode of getKeys(all_modes)">{{all_modes[mode]}}</div>
+		<div class="restart-button new-game-button" (click)="newGame(mode)" *ngFor="let mode of getKeys(all_modes)">{{all_modes[mode]}}</div>
 	  </div>
+	</div>
+	
+	<div  class="code-display2">
+	<span>Key Pressed: {{obKeyPressed}}</span>
+	<br><br>
+	<span>Code behind: {{obCodeBehind}}</span>
+	<br>
+	<span>worm size: {{worm.parts.length}}</span>
+	
+	</div>
+	
+	
+	<div *ngIf="default_mode=='Level_2'" class="code-display">
+	<span>hamster pos : X:{{fruit.x}}, Y: {{fruit.y}}</span>
+	<br><br>
+	<span>Worm Pos: {{obCodeBehind}}</span>
+	<br>
+	<span>worm size: {{worm.parts.length}}</span>
+	
 	</div>
 	
 </div>
@@ -33,10 +52,11 @@
 </div>
 	
  <ng-template #AskChildAge>
+ <br> <br> <br> <br>
 	<div  (click)="btn_setChildAge('5')" style="cursor:pointer; position:fixed;top: 40%;left: 20%;"><table>
-	<tr><td><img  width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/girl-6.png"></td><td><div style="font-size:25px; border-radius:25px; background: #73AD21; padding: 20px; width: 200px;height: 50px;">  5 to 9 years !</div><td><img width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/boy-6.png"></td></tr></table></div>
+	<tr><td><img  width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/girl-6.png"></td><td><div style="font-size:25px; border-radius:25px; background: #73AD21; padding: 20px; width: 180px;height: 50px;">  3 to 5 years !</div><td><img width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/boy-6.png"></td></tr></table></div>
 	
-	<div  (click)="btn_setChildAge('10')" style="cursor:pointer; position:fixed;top: 40%;left: 55%;"><table><tr><td><img  width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/girl-12.png"></td><td><div style="font-size:20px; border-radius:25px; background: #73AD21; padding: 25px; width: 200px;height: 50px;">  10 to 15 years !</div><td><img width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/boy-12.png"></td></tr>
+	<div  (click)="btn_setChildAge('10')" style="cursor:pointer; position:fixed;top: 40%;left: 55%;"><table><tr><td><img  width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/girl-12.png"></td><td><div style="font-size:25px; border-radius:25px; background: #73AD21; padding: 25px; width: 180px;height: 50px;">  6 to 10 years !</div><td><img width="90px" height="100px" src="https://github.com/vaibhavkeshav/hackdays/raw/master/boy-12.png"></td></tr>
 	
 	</table></div>
 </ng-template>
